@@ -26,6 +26,7 @@ class Double : public ObjectWrap {
     static void Initialize(Handle<Object> target);    
     static Handle<Value> ToString(const Arguments &args);
     static Handle<Value> Inspect(const Arguments &args);
+    static Handle<Value> ToJSON(const Arguments &args);
 
     // Constructor used for creating new Long objects from C++
     static Persistent<FunctionTemplate> constructor_template;
