@@ -1300,6 +1300,10 @@ function Code(code, scope) {
   this.scope = scope == null ? {} : scope;
 };
 
+Code.prototype.toJSON = function() {
+  return {scope:this.scope, code:this.code};
+}
+
 /**
  * Symbol constructor.
  *
@@ -1314,6 +1318,10 @@ Symbol.prototype.toString = function() {
 }
 
 Symbol.prototype.inspect = function() {
+  return this.value;
+}
+
+Symbol.prototype.toJSON = function() {
   return this.value;
 }
 
@@ -1344,11 +1352,11 @@ function DBRef (namespace, oid, db) {
 };
 
 DBRef.prototype.toJSON = function() {
-  return JSON.stringify({
+  return {
     '$ref':this.namespace,
     '$id':this.oid,
     '$db':this.db == null ? '' : this.db
-  });
+  };
 }
 
 /**
